CIV-9967: Update Code Smell